--- a/config/standalone.example.toml
+++ b/config/standalone.example.toml
@@ -82,8 +82,8 @@ enable = true
 # Whether to enable Prometheus remote write and read in HTTP API, true by default.
 enable = true
 # Whether to store the data from Prometheus remote write in metric engine.
-# false by default
-with_metric_engine = false
+# true by default
+with_metric_engine = true
 
 [wal]
 # Available wal providers:
