--- a/tests-integration/Cargo.toml
+++ b/tests-integration/Cargo.toml
@@ -12,7 +12,7 @@ api.workspace = true
 arrow-flight.workspace = true
 async-trait = "0.1"
 auth.workspace = true
-axum = "0.6"
+axum.workspace = true
 axum-test-helper = { git = "https://github.com/sunng87/axum-test-helper.git", branch = "patch-1" }
 catalog.workspace = true
 chrono.workspace = true
