--- a/src/query/Cargo.toml
+++ b/src/query/Cargo.toml
@@ -23,6 +23,7 @@ common-error.workspace = true
 common-function.workspace = true
 common-macro.workspace = true
 common-meta.workspace = true
+common-plugins.workspace = true
 common-query.workspace = true
 common-recordbatch.workspace = true
 common-telemetry.workspace = true
