--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -33,6 +33,7 @@ common-grpc.workspace = true
 common-macro.workspace = true
 common-mem-prof = { workspace = true, optional = true }
 common-meta.workspace = true
+common-plugins.workspace = true
 common-query.workspace = true
 common-recordbatch.workspace = true
 common-runtime.workspace = true
