fix: IntermediateWriter closes underlying writer twice
Signed-off-by: Ruihang Xia <waynestxia@gmail.com>

--- a/src/index/Cargo.toml
+++ b/src/index/Cargo.toml
@@ -25,5 +25,6 @@ snafu.workspace = true
 
 [dev-dependencies]
 rand.workspace = true
+tempfile.workspace = true
 tokio-util.workspace = true
 tokio.workspace = true
