feat: support cache for batch_get in CachedMetaKvBackend.

--- a/config/frontend.example.toml
+++ b/config/frontend.example.toml
@@ -69,6 +69,10 @@ timeout = "3s"
 ddl_timeout = "10s"
 connect_timeout = "1s"
 tcp_nodelay = true
+# The configuration about the cache of the Metadata.
+cached_max_capacity = 100000
+cached_ttl = "10m"
+cached_tti = "5m"
 
 # Log options, see `standalone.example.toml`
 # [logging]
