Revert "try larger runner host"
This reverts commit 03c18c0f5150ae56b95dd97417418c3b0f3a55c4.

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -82,7 +82,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-20.04-8-cores ]
+        os: [ ubuntu-20.04 ]
     timeout-minutes: 60
     steps:
       - uses: actions/checkout@v3
