--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "dataflow"
+name = "flow"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 api.workspace = true
