add paths to CI config
Signed-off-by: Ruihang Xia <waynestxia@gmail.com>

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -9,6 +9,7 @@ on:
       - '.dockerignore'
       - 'docker/**'
       - '.gitignore'
+      - 'grafana/**'
   push:
     branches:
       - main
@@ -19,6 +20,7 @@ on:
       - '.dockerignore'
       - 'docker/**'
       - '.gitignore'
+      - 'grafana/**'
   workflow_dispatch:
 
 name: CI
