--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -7,6 +7,7 @@ license.workspace = true
 [dependencies]
 api.workspace = true
 bimap = "0.6.3"
+common-decimal.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
 common-meta.workspace = true
