--- a/src/common/function/Cargo.toml
+++ b/src/common/function/Cargo.toml
@@ -6,6 +6,8 @@ license.workspace = true
 
 [dependencies]
 arc-swap = "1.0"
+async-trait.workspace = true
+api.workspace = true
 build-data = "0.1"
 chrono-tz = "0.6"
 common-error.workspace = true
@@ -22,6 +24,7 @@ paste = "1.0"
 session.workspace = true
 snafu.workspace = true
 statrs = "0.16"
+table.workspace = true
 
 [dev-dependencies]
 ron = "0.7"
