--- a/src/operator/Cargo.toml
+++ b/src/operator/Cargo.toml
@@ -18,6 +18,7 @@ common-base.workspace = true
 common-catalog.workspace = true
 common-datasource.workspace = true
 common-error.workspace = true
+common-function.workspace = true
 common-grpc-expr.workspace = true
 common-macro.workspace = true
 common-meta.workspace = true
