--- a/src/metric-engine/Cargo.toml
+++ b/src/metric-engine/Cargo.toml
@@ -17,6 +17,7 @@ common-telemetry.workspace = true
 common-time.workspace = true
 datafusion.workspace = true
 datatypes.workspace = true
+futures-util.workspace = true
 lazy_static = "1.4"
 mito2.workspace = true
 mur3 = "0.1"
