--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -39,6 +39,7 @@ datafusion-expr.workspace = true
 datafusion.workspace = true
 datatypes.workspace = true
 futures.workspace = true
+futures-util.workspace = true
 humantime-serde.workspace = true
 index.workspace = true
 lazy_static = "1.4"
