--- a/src/common/function/Cargo.toml
+++ b/src/common/function/Cargo.toml
@@ -13,6 +13,7 @@ chrono-tz = "0.6"
 common-error.workspace = true
 common-macro.workspace = true
 common-query.workspace = true
+common-runtime.workspace = true
 common-time.workspace = true
 datafusion.workspace = true
 datatypes.workspace = true
