--- a/src/common/function/Cargo.toml
+++ b/src/common/function/Cargo.toml
@@ -14,6 +14,7 @@ common-error.workspace = true
 common-macro.workspace = true
 common-query.workspace = true
 common-runtime.workspace = true
+common-telemetry.workspace = true
 common-time.workspace = true
 datafusion.workspace = true
 datatypes.workspace = true
