ci: fix nightly build

--- a/.github/actions/upload-artifacts/action.yml
+++ b/.github/actions/upload-artifacts/action.yml
@@ -50,7 +50,7 @@ runs:
       run: Get-FileHash ${{ inputs.artifacts-dir }}.tar.gz -Algorithm SHA256 | select -ExpandProperty Hash > ${{ inputs.artifacts-dir }}.sha256sum
 
     # Note: The artifacts will be double zip compressed(related issue: https://github.com/actions/upload-artifact/issues/39).
-    # However, when we use 'actions/download-artifact@v3' to download the artifacts, it will be automatically unzipped.
+    # However, when we use 'actions/download-artifact' to download the artifacts, it will be automatically unzipped.
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
