feat: Add a sorted index to the mutable index shard (#11)
* feat: implement mutable shard by btree map

* fix: add key to pk index

* chore: remove unused method

* chore: fix cilppy

--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -70,3 +70,4 @@ uuid.workspace = true
 common-procedure-test.workspace = true
 common-test-util.workspace = true
 log-store.workspace = true
+rand.workspace = true
