feat: add `OrdValue` accum&use enum_dispatch

--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -18,9 +18,11 @@ common-query.workspace = true
 common-telemetry.workspace = true
 common-time.workspace = true
 datatypes.workspace = true
+enum_dispatch = "0.3"
 hydroflow = "0.5.0"
 itertools.workspace = true
 num-traits = "0.2"
+once_cell.workspace = true
 serde.workspace = true
 servers.workspace = true
 session.workspace = true
