--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -41,6 +41,7 @@ datatypes.workspace = true
 futures.workspace = true
 humantime-serde.workspace = true
 index.workspace = true
+itertools.workspace = true
 lazy_static = "1.4"
 log-store = { workspace = true, optional = true }
 memcomparable = "0.2"
