--- a/src/common/function/Cargo.toml
+++ b/src/common/function/Cargo.toml
@@ -5,12 +5,16 @@ version.workspace = true
 license.workspace = true
 
 [dependencies]
+api.workspace = true
 arc-swap = "1.0"
+async-trait.workspace = true
 build-data = "0.1"
 chrono-tz = "0.6"
 common-error.workspace = true
 common-macro.workspace = true
 common-query.workspace = true
+common-runtime.workspace = true
+common-telemetry.workspace = true
 common-time.workspace = true
 datafusion.workspace = true
 datatypes.workspace = true
@@ -22,6 +26,7 @@ paste = "1.0"
 session.workspace = true
 snafu.workspace = true
 statrs = "0.16"
+table.workspace = true
 
 [dev-dependencies]
 ron = "0.7"
