test(create_logical_tables): add tests for on_create_metadata

--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -22,6 +22,7 @@ common-catalog.workspace = true
 common-error.workspace = true
 common-grpc-expr.workspace = true
 common-macro.workspace = true
+common-procedure-test.workspace = true
 common-procedure.workspace = true
 common-procedure-test.workspace = true
 common-recordbatch.workspace = true
