--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -13,14 +13,14 @@ testing = []
 [dependencies]
 aide = { version = "0.9", features = ["axum"] }
 api.workspace = true
+arrow.workspace = true
 arrow-flight.workspace = true
 arrow-ipc.workspace = true
 arrow-schema.workspace = true
-arrow.workspace = true
 async-trait = "0.1"
 auth.workspace = true
-axum-macros = "0.3.8"
 axum.workspace = true
+axum-macros = "0.3.8"
 base64.workspace = true
 bytes.workspace = true
 catalog.workspace = true
@@ -28,8 +28,8 @@ chrono.workspace = true
 common-base.workspace = true
 common-catalog.workspace = true
 common-error.workspace = true
-common-grpc-expr.workspace = true
 common-grpc.workspace = true
+common-grpc-expr.workspace = true
 common-macro.workspace = true
 common-mem-prof = { workspace = true, optional = true }
 common-meta.workspace = true
@@ -38,9 +38,9 @@ common-recordbatch.workspace = true
 common-runtime.workspace = true
 common-telemetry.workspace = true
 common-time.workspace = true
+datafusion.workspace = true
 datafusion-common.workspace = true
 datafusion-expr.workspace = true
-datafusion.workspace = true
 datatypes.workspace = true
 derive_builder.workspace = true
 digest = "0.10"
@@ -91,11 +91,11 @@ snap = "1"
 sql.workspace = true
 strum.workspace = true
 table.workspace = true
+tokio.workspace = true
 tokio-rustls = "0.25"
 tokio-stream = { workspace = true, features = ["net"] }
-tokio.workspace = true
-tonic-reflection = "0.10"
 tonic.workspace = true
+tonic-reflection = "0.10"
 tower = { version = "0.4", features = ["full"] }
 tower-http = { version = "0.3", features = ["full"] }
 urlencoding = "2.1"
@@ -124,3 +124,4 @@ tokio-test = "0.4"
 
 [build-dependencies]
 build-data = "0.1.4"
+common-version.workspace = true
