--- a/src/common/function/Cargo.toml
+++ b/src/common/function/Cargo.toml
@@ -8,7 +8,6 @@ license.workspace = true
 api.workspace = true
 arc-swap = "1.0"
 async-trait.workspace = true
-build-data = "0.1"
 chrono-tz = "0.6"
 common-error.workspace = true
 common-macro.workspace = true
@@ -16,6 +15,7 @@ common-query.workspace = true
 common-runtime.workspace = true
 common-telemetry.workspace = true
 common-time.workspace = true
+common-version.workspace = true
 datafusion.workspace = true
 datatypes.workspace = true
 libc = "0.2"
