--- a/.github/workflows/doc-issue.yml
+++ b/.github/workflows/doc-issue.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: create an issue in doc repo
-        uses: dacbd/create-issue-action@main
+        uses: dacbd/create-issue-action@v1.2.1
         with:
           owner: GreptimeTeam
           repo: docs
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: create an issue in cloud repo
-        uses: dacbd/create-issue-action@main
+        uses: dacbd/create-issue-action@v1.2.1
         with:
           owner: GreptimeTeam
           repo: greptimedb-cloud
