--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -31,6 +31,7 @@ etcd-client.workspace = true
 futures-util.workspace = true
 futures.workspace = true
 humantime-serde.workspace = true
+itertools.workspace = true
 lazy_static.workspace = true
 prometheus.workspace = true
 prost.workspace = true
