--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -32,6 +32,7 @@ futures.workspace = true
 futures-util.workspace = true
 hex = { version = "0.4" }
 humantime-serde.workspace = true
+itertools.workspace = true
 lazy_static.workspace = true
 prometheus.workspace = true
 prost.workspace = true
