--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -71,3 +71,4 @@ uuid.workspace = true
 common-procedure-test.workspace = true
 common-test-util.workspace = true
 log-store.workspace = true
+rand.workspace = true
