--- a/src/common/function/Cargo.toml
+++ b/src/common/function/Cargo.toml
@@ -11,6 +11,7 @@ async-trait.workspace = true
 chrono-tz = "0.6"
 common-error.workspace = true
 common-macro.workspace = true
+common-meta.workspace = true
 common-query.workspace = true
 common-runtime.workspace = true
 common-telemetry.workspace = true
