feat: unit tests for migrate_region and procedure_state

--- a/src/common/function/Cargo.toml
+++ b/src/common/function/Cargo.toml
@@ -24,6 +24,8 @@ num = "0.4"
 num-traits = "0.2"
 once_cell.workspace = true
 paste = "1.0"
+serde.workspace = true
+serde_json.workspace = true
 session.workspace = true
 snafu.workspace = true
 statrs = "0.16"
