refactor: put together HTTP headers
Signed-off-by: tison <wander4096@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,7 +57,7 @@ members = [
     "src/index",
     "tests-fuzz",
     "tests-integration",
-    "tests/runner",
+    "tests/runner", "src/common/api",
 ]
 resolver = "2"
 
