--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -25,6 +25,7 @@ base64.workspace = true
 bytes.workspace = true
 catalog.workspace = true
 chrono.workspace = true
+common-api.workspace = true
 common-base.workspace = true
 common-catalog.workspace = true
 common-error.workspace = true
