ci: try fix log location
Signed-off-by: tison <wander4096@gmail.com>

--- a/.github/actions/build-windows-artifacts/action.yml
+++ b/.github/actions/build-windows-artifacts/action.yml
@@ -65,7 +65,7 @@ runs:
       uses: actions/upload-artifact@v3
       with:
         name: sqlness-logs
-        path: ${{ runner.temp }}/greptime-*.log
+        path: /tmp/greptime-*.log
         retention-days: 3
 
     - name: Build greptime binary
