--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -20,6 +20,7 @@ common-error.workspace = true
 common-grpc-expr.workspace = true
 common-macro.workspace = true
 common-procedure.workspace = true
+common-procedure-test.workspace = true
 common-recordbatch.workspace = true
 common-runtime.workspace = true
 common-telemetry.workspace = true
