--- a/src/common/function/Cargo.toml
+++ b/src/common/function/Cargo.toml
@@ -9,6 +9,7 @@ api.workspace = true
 arc-swap = "1.0"
 async-trait.workspace = true
 chrono-tz = "0.6"
+common-catalog.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
 common-meta.workspace = true
