--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -172,7 +172,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: sqlness-logs
+          name: sqlness-logs-with-kafka-wal
           path: ${{ runner.temp }}/greptime-*.log
           retention-days: 3
 
